# gimp-weathered-photo-plugin

./: .codecov.yml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release-please.yml
docs/: gimp-smoke-test.md
docs/superpowers/plans/: 2026-07-12-gimp-semantic-analysis-bridge.md  2026-07-12-initial-project-scaffolding.md  2026-07-12-initial-worn-image-pipeline-plugin.md  2026-07-13-mediapipe-tasks-model-assets.md
docs/superpowers/specs/: 2026-07-12-gimp-semantic-analysis-bridge-design.md  2026-07-12-initial-project-scaffolding-design.md  2026-07-12-initial-worn-image-pipeline-plugin-design.md  2026-07-12-public-readme-presentation-design.md  2026-07-13-mediapipe-tasks-model-assets-design.md
src/gimp_weathered_photo_plugin/: __init__.py  __main__.py  analyzer.py  assets.py  batch.py  bridge_protocol.py  gimp_console_bridge.py  gimp_host.py  metadata.py  model_assets.py  models.py  planning.py  protection.py  semantic_bridge.py  tasks_landmarks.py
src/gimp_weathered_photo_plugin/assets/: mediapipe-model-manifest.json  worn-print-manifest.json
tests/: test_analyzer.py  test_assets.py  test_batch.py  test_bridge_protocol.py  test_cli.py  test_documentation_contract.py  test_gimp_adapter_contract.py  test_gimp_console_bridge.py  test_import_boundaries.py  test_metadata.py  test_model_assets.py  test_models.py  test_package.py  test_planning.py  test_protection.py  test_repository_configuration.py  test_semantic_bridge.py  test_tasks_landmarks.py
(+3 files in other folders)
