[build-system]
requires = ["uv_build>=0.10.0,<0.12.0"]
build-backend = "uv_build"

[project]
name = "gimp-weathered-photo-plugin"
version = "0.0.0"
description = "A GIMP 3 plug-in for applying a weathered print treatment to images."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Rule 0 Softworks" }]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.4,<10",
  "pytest-cov>=6,<8",
  "pyyaml>=6,<7",
  "ruff>=0.12,<1",
  "ty>=0.0.1a20,<1",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["gimp_weathered_photo_plugin"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ty.environment]
python-version = "3.12"
